# fast-api-todo

fastapi-project/: pyproject.toml
fastapi-project/app/: crud.py  database.py  main.py  models.py  routes.py
fastapi-todo-app/: README.md  pyproject.toml  run.py
fastapi-todo-app/app/: __init__.py  main.py
fastapi-todo-app/app/api/v1/: api.py
fastapi-todo-app/app/api/v1/endpoints/: todos.py
fastapi-todo-app/app/core/: config.py  database.py
fastapi-todo-app/app/models/: todo.py
fastapi-todo-app/app/repositories/: todo_repository.py
fastapi-todo-app/app/services/: todo_service.py
